# AWaRE-REU

./: README.md
aria_controller/: CMakeLists.txt  package.xml
aria_controller/launch/: system_test.launch
aria_controller/src/: listener.cpp  pub_test.py  system_input.py  system_output_ARIA.py  trajectoryMatrices.py  trajectory_ARIA.py
beginner_tutorials/: CMakeLists.txt  package.xml
beginner_tutorials/src/: listener.cpp
p3dx_teleop/: manifest.xml
pubsub/: CMakeLists.txt  package.xml
